| Bug #5149 | Views: View using function with funny name: fails | ||
|---|---|---|---|
| Submitted: | 23 Aug 2004 0:35 | Modified: | 6 Sep 2004 13:42 |
| Reporter: | Peter Gulutzan | Email Updates: | |
| Status: | Closed | Impact on me: | |
| Category: | MySQL Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.2-alpha-debug | OS: | Linux (SuSE 8.2) |
| Assigned to: | Oleksandr Byelkin | CPU Architecture: | Any |
[23 Aug 2004 0:35]
Peter Gulutzan
[30 Aug 2004 21:00]
Oleksandr Byelkin
ChangeSet 1.1737 04/08/30 21:47:52 bell@sanja.is.com.ua +3 -0 fixed printing of stored procedure functions names (BUG#5149)
[6 Sep 2004 13:42]
Oleksandr Byelkin
Thank you for bugreport! bugfix is pushed into our source repository.
