fixed printing of stored procedure functions names (BUG#5149)